Corrected spacing

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1{
     text-align: center;
     margin: auto;
     width: 50%;
-    padding: 150px;
+    padding: 100px;
 }
 
 img {
